styles.css
/* ... */
.openstudio-browse-post-item-img .openstudio-item-request-feedback img,
.openstudio-content-view-primary .openstudio-item-request-feedback img,
.openstudio-folder-view-primary .openstudio-item-request-feedback img {
    width: 18px;
    height: 18px;
}

.openstudio-browse-post-item-img .openstudio-item-lock img,
.openstudio-content-view-primary .openstudio-item-lock img,
.openstudio-folder-view-primary .openstudio-item-lock img {
    width: 16px;
    height: 16px;
}

.openstudio-item-request-feedback-cancel,
.openstudio-item-unlock {
    display: none;
}

.openstudio-modal-content .openstudio-item-request-feedback,
.openstudio-modal-content .openstudio-item-unlock,
.openstudio-modal-content .openstudio-item-lock {
    display: none;
}

#openstudio_comment_form:before {
    display: inline;
}

#openstudio_comment_form:focus {
    outline: none;
}

.openstudio-folder-content .openstudio-item-request-feedback,
.openstudio-folder-content .openstudio-item-lock {
    margin-top: 17px;
    width: 100%;
}

/* Activity. */
.openstudio-grid.openstudio-activity-cutting-edge {
    border-top: 1px solid #dfdfdf;
    padding-top: 20px;
    margin-top: 0px;
}

.openstudio-activity-title {
    font-size: 1.28571em;
    font-weight: bold;
    line-height: 18px;
}

.openstudio-profile-progress-content-description .openstudio-profile-progress-step.activity-locked {
    background: #ea0000;
    border-color: #ea0000;
    cursor: pointer;
}

.openstudio-activity-title-wrapper {
    margin: 0 24px 0 24px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.openstudio-activity-title-wrapper:nth-child(n+5) {
    border-top: 1px solid #dfdfdf;
    padding-top: 10px;
    margin-bottom: 11px;
}

.openstudio-actvity-title {
    font-size: 1em;
    font-weight: bold;
    display: inline-block;
    border: none;
}

a.openstudio-actvity-title:hover  {
    font-weight: bold;
    text-decoration: underline;
}

.openstudio-filter-select {
    padding-left: 15px;
}

.openstudio-add-new-lock-message {
    margin-bottom: 15px;
}

.openstudio-activity-lock-title {
    padding-bottom: 4px;
}

.openstudio-grid-item-add-new-required,
.openstudio-grid-item-add-new-locked-required {
    float: left;
    width: 244px;
    margin-bottom: 24px;
    border-radius: 4px;
    background-color: #fff6e2;
}

.openstudio-grid-item-add-new-locked {
    background: #ffffff;
}

.openstudio-activity-lock-message {
    margin-bottom: 15px;
}

.openstudio-add-activity-lock-message {
    margin-top: -25px;
}

.openstudio-activity-content-lock-message {
    margin-top: -15px;
}

.openstudio-grid-item-content-subtitle {
    font-size: 1em;
    font-weight: bold;
    padding-top: 5px;
    display: inline;
    float: left;
    width: 100%;
}

.openstudio-grid-item-content-detail-owner-view {
    font-size: 1em;
    border-right: none;
    border-left: 0 none;
    border-right: medium none;
    background-color: transparent;
    display: inline-block;
    padding-right: 12px;
}

.openstudio-grid-item-content-detail-owner-view img {
    width: 10px;
    display: inline-block;
    margin-left: -2px;
}

.openstudio-grid-item-content .tooltip > .tooltip-inner {
    width: 120px;
}

/* Content detail page */
.openstudio-content-view-container {
    background: #ffffff none repeat scroll 0 0;
    margin: 20px 24px 72px 24px;
    padding: 8px 20px 40px 20px;
    position: relative;
}

.openstudio-content-view-title-box {
    margin: 0 0 25px 0px;
}

.openstudio-content-view-title {
    font-size: 1.28571em ;
    font-weight: bold;
    line-height: 28px;
    min-height: 28px;
    padding: 0;
    margin: 0 0 17px 0;
    float: left;
}

.openstudio-content-view-title-box h1 {
    width: calc(100% - 39px);
}

span.openstudio-content-view-title {
    padding-right: 20px;
}

.openstudio-content-view-title-icon {
    float: right;
}

.openstudio-content-view-title-icon img {
    border: 0px;
    width: 24px;
    height: 24px;
}

.openstudio-content-view-version img {
    height: auto;
}

.openstudio-content-view-version-divider {
    border-right: 1px solid #dfdfdf;
}

.openstudio-content-view-current-version {
    float: right;
}

.openstudio-content-view-version-title-box {
    margin-bottom: 17px;
}

.path-mod-openstudio .openstudio-current-version-button {
    font-size: 1em;
    line-height: 20px;
    margin: 0;
    padding-left: 4px;
}

.path-mod-openstudio .openstudio-current-version-button img {
    width: 12px;
}

.openstudio-content-view-subtitle {
    font-size: 1.14285em ;
    font-weight: bold;
    margin-top: 10px;
}

.openstudio-content-view-primary {
    width: calc(62% - 36px);
    float: left;
    margin-right: 40px;
    position: relative;
}

.openstudio-content-view-secondary {
    width: calc(38% - 4px);
    display: block;
    float: right;
    top: 0;
}

.openstudio-content-view-container .maximize {
    width: 100%;
}

.openstudio-content-view-type-img-box {
    height: 372px;
    text-align: center;
    width: 100%;
}

.openstudio-content-view-img {
    width: 100%;
}

.openstudio-content-view-type-img {
    height: 140px;
    margin-top: 122px;
}

.openstudio-content-view-container .maximize img {
    max-width: 100%;
}

.openstudio-content-view-date {
    font-size: 0.85714em;
    float: left;
}

.openstudio-content-view-maximize-box {
    float: right;
    line-height: 13px;
}

.openstudio-content-view-maximize {
    cursor: pointer;
    vertical-align: middle;
}

.openstudio-content-view-maximize img {
    display: inline-block;
    margin-bottom: 2px;
    margin-right: 5px;
}

.openstudio-content-view-maximize.minimize img {
    margin-right: 6px;
}
.path-mod-openstudio.gecko .openstudio-content-view-maximize.minimize img {
    margin-right: 5px;
}

.openstudio-content-view-description {
    font-size: 1em;
    margin-top: 10px;
}

.openstudio-content-view-description img {
    width: 100%;
    height: auto;
}
/* ... */

